# Big-Data-Architecture-Project

./: app.json  cloudbuild.deploy.yaml  cloudbuild.live_data.deploy.yaml  cloudbuild.live_data.pr.yaml  cloudbuild.pr.yaml  cloudbuild.static_gtfs.deploy.yaml  cloudbuild.static_gtfs.pr.yaml  package-lock.json  package.json  tsconfig.json
api/: Dockerfile  README.md  __init__.py  config.py  db.py  main.py  redis_client.py  requirements-dev.txt  requirements.txt  services.py
api/tests/: __init__.py  test_contracts.py  test_route_search.py
app/: _layout.js  index.js  route-detail.js  trips.js
app/(tabs)/: trips.js
components/: BusCard.js  Header.js  RouteResultCard.js
lib/: api.js
live_data/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
live_data/deploy/systemd/: rtd-collector.service
live_data/scripts/: install_systemd_service.sh
live_data/sql/: add_dedup_constraints.sql  schema.sql  static_schema.sql
live_data/src/rtd_collector/: collector.py  config.py  db.py  main.py  migrate.py  redis_store.py  static_sync.py
live_data/tests/: test_config.py  test_main.py  test_static_sync.py
scripts/: bootstrap-gcp.sh  bootstrap-live-data-gcp.sh  bootstrap-static-gtfs-gcp.sh  deploy-api-cloud-run.sh  deploy-live-data-job.sh  deploy-static-gtfs-job.sh
